Creating crud operations for university